// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not render <Observer /> render outside view 1`] = `
<Observer
  threshold={0}
  triggerOnce={false}
>
  <div>
    Inview: 
    false
  </div>
</Observer>
`;

exports[`Should render <Observer /> render when in view 1`] = `
<Observer
  threshold={0}
  triggerOnce={false}
>
  <div>
    Inview: 
    true
  </div>
</Observer>
`;

exports[`should render plain children 1`] = `
<Observer
  threshold={0}
  triggerOnce={false}
>
  <div>
    inner
  </div>
</Observer>
`;

exports[`should render with className 1`] = `
<Observer
  className="inner-class"
  threshold={0}
  triggerOnce={false}
>
  <div
    className="inner-class"
  >
    inner
  </div>
</Observer>
`;

exports[`should render with tag 1`] = `
<Observer
  tag="span"
  threshold={0}
  triggerOnce={false}
>
  <span>
    inner
  </span>
</Observer>
`;
